2008-02-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.25 released.

2008-02-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* surface.C, surface.h (Surface::update_pond_average): Export it.
	* movement_rect.C (MovementRect::tick): 
	* movement_1D.C (Movement1D::tick_water): 
	* macro_std.C (MacroStandard::tick): Call it.

2008-02-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* production.C (Production::tick): Prevent negative mass.
	* crop_old.C (CropOld::NetProduction): Ditto.

	* Version 4.24 released.

2008-02-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_water.C, soil_water.h (MaxExfiltration): New version that
	takes ekstra 'edge' parameter.
	* surface.C: Allow different q_top for different parts of the surface. 
	* surface.h, surface.C (initialize): New function.
	* column_std.C (ColumnStandard::initialize): Call it.

	* ABAprod_soil.C: Changed root density symbol from 'l' to 'L'.
	
2008-02-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_water.C, soil_water.h (K) Initialize and export.
	* geometry.h, geometry_rect.h (edge_other): Moved to 'geometry.h'.
	* groundwater_extern.C, groundwater_flux.C, groundwater_file.C:
	* groundwater_fixed.C, groundwater_deep.C, groundwater_lysimeter.C:
	* groundwater_pipe.C, groundwater_static.C:
	* groundwater.h (q_bottom): Take edge parameter.
	* groundwater_aquitard.C: New model.
	* Makefile (MODELS): Add it.
	* uzrichard.C (UZRichard::richard): Update caller.
	* uzlr.C (UZlr::tick): Ditto.

2008-02-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.23 released.

2008-02-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* dlf.C, dlf.h (DLF::parameter): New function.
	* log_table.C (parameter_names): New parameter.

2008-02-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log-std.dai ("Soil chemical"): Take tillage into account.
	* chemical_std.C (surface_tillage): New parameter.
	* lib/log.dai ("Surface Chemicals"): Log it.
	* chemical_std.C, chemical.h (mix): 