@@ -1,3 +1,12 @@
+2008-02-15  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* groundwater.C, groundwater.h, groundwater_pipe.C
+	(set_original_bottom): New function.
+	(set_Z_aquitard): Removed.
+	* soil.C (Soil::initialize): Update caller.
+	(Soil::initialize_aquitard): Return original bottom instead of new
+	Z aquitard.
+
 2008-02-14  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* Version 4.25 released.
